--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -34,7 +34,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp, debug, spanmetrics]
+      exporters: [otlp, debug,logging,spanmetrics]
     metrics:
       receivers: [otlp, spanmetrics]
       processors: [batch]
